--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="account-setting">
               <div class="header-two">
                 <p class="my-account">my account</p>
-                <button class="setting-button">setting</button>
+                <button class="setting-button">settings</button>
               </div>
 
               <h2 class="heading-three">user information</h2>
